--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,6 @@
 @import "tailwindcss";
 @import "tw-animate-css";
+@import "@uploadthing/react/styles.css";
 
 @custom-variant dark (&:is(.dark *));
 
@@ -76,6 +77,20 @@
   --sidebar-accent-foreground: oklch(0.205 0 0);
   --sidebar-border: oklch(0.922 0 0);
   --sidebar-ring: oklch(0.708 0 0);
+  --bg-color: #010101;
+  --btn-color: #FFFD53;
+  --btn-hover: #ffd82b;
+  --primary-color: #282828;
+  --text-color: #fff;
+  --second-text: #808080;
+}
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+.no-scrollbar {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;     /* Firefox */
 }
 
 .dark {
@@ -110,6 +125,17 @@
   --sidebar-accent-foreground: oklch(0.985 0 0);
   --sidebar-border: oklch(1 0 0 / 10%);
   --sidebar-ring: oklch(0.556 0 0);
+}
+
+.sidebar {
+  display: none; /* hidden by default */
+}
+
+/* Show sidebar on screens >= 768px */
+@media (min-width: 768px) {
+  .sidebar {
+    display: block;
+  }
 }
 
 @layer base {
