--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -77,12 +77,12 @@
   --sidebar-accent-foreground: oklch(0.205 0 0);
   --sidebar-border: oklch(0.922 0 0);
   --sidebar-ring: oklch(0.708 0 0);
-  --bg-color: #010101;
+  --bg-color: #1d1d1d;
   --btn-color: #FFFD53;
   --btn-hover: #ffd82b;
   --primary-color: #282828;
   --text-color: #fff;
-  --second-text: #808080;
+  --secondary-text: #808080;
 }
 .no-scrollbar::-webkit-scrollbar {
   display: none;
